// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction decode should be able decode transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 196000n,
  "id": Object {
    "data": Array [
      36,
      72,
      83,
      226,
      239,
      29,
      136,
      33,
      52,
      60,
      11,
      60,
      5,
      219,
      2,
      207,
      90,
      73,
      255,
      189,
      50,
      73,
      35,
      38,
      196,
      196,
      210,
      224,
      40,
      0,
      53,
      224,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 0n,
  "params": Object {
    "amount": 100000000n,
    "data": "we have some information is here",
    "recipientAddress": Object {
      "data": Array [
        0,
        177,
        24,
        43,
        49,
        122,
        130,
        228,
        185,
        196,
        165,
        65,
        25,
        206,
        210,
        159,
        25,
        180,
        150,
        222,
      ],
      "type": "Buffer",
    },
    "tokenID": Object {
      "data": Array [
        0,
        0,
        0,
        2,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      7,
      146,
      254,
      203,
      190,
      207,
      110,
      115,
      112,
      247,
      167,
      178,
      23,
      169,
      209,
      89,
      243,
      128,
      211,
      236,
      208,
      242,
      118,
      13,
      122,
      85,
      221,
      62,
      39,
      233,
      113,
      132,
    ],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`Transaction encode should be able to encode transaction 1`] = `"0a05746f6b656e12087472616e73666572180020a0fb0b2a200792fecbbecf6e7370f7a7b217a9d159f380d3ecd0f2760d7a55dd3e27e9718432470a0800000002000000011080c2d72f1a1400b1182b317a82e4b9c4a54119ced29f19b496de22207765206861766520736f6d6520696e666f726d6174696f6e2069732068657265"`;

exports[`Transaction init should initialise encoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 196000n,
  "module": "token",
  "nonce": 0n,
  "params": Object {
    "amount": 100000000n,
    "data": "we have some information is here",
    "recipientAddress": Object {
      "data": Array [
        0,
        177,
        24,
        43,
        49,
        122,
        130,
        228,
        185,
        196,
        165,
        65,
        25,
        206,
        210,
        159,
        25,
        180,
        150,
        222,
      ],
      "type": "Buffer",
    },
    "tokenID": Object {
      "data": Array [
        0,
        0,
        0,
        2,
        0,
        0,
        0,
        1,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      7,
      146,
      254,
      203,
      190,
      207,
      110,
      115,
      112,
      247,
      167,
      178,
      23,
      169,
      209,
      89,
      243,
      128,
      211,
      236,
      208,
      242,
      118,
      13,
      122,
      85,
      221,
      62,
      39,
      233,
      113,
      132,
    ],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`Transaction init should initialise the transaction for given module and command 1`] = `
Object {
  "command": "transfer",
  "fee": 125000n,
  "module": "token",
  "nonce": 0n,
  "params": Object {},
  "senderPublicKey": Object {
    "data": Array [
      7,
      146,
      254,
      203,
      190,
      207,
      110,
      115,
      112,
      247,
      167,
      178,
      23,
      169,
      209,
      89,
      243,
      128,
      211,
      236,
      208,
      242,
      118,
      13,
      122,
      85,
      221,
      62,
      39,
      233,
      113,
      132,
    ],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`Transaction sign should be able to sign encoded transaction 1`] = `
Array [
  Object {
    "data": Array [
      158,
      18,
      126,
      106,
      165,
      90,
      134,
      169,
      36,
      129,
      221,
      40,
      16,
      101,
      232,
      157,
      195,
      87,
      140,
      148,
      117,
      113,
      59,
      29,
      79,
      100,
      148,
      88,
      84,
      10,
      239,
      144,
      206,
      1,
      57,
      157,
      132,
      64,
      48,
      160,
      66,
      160,
      197,
      12,
      172,
      251,
      92,
      64,
      218,
      202,
      180,
      123,
      180,
      125,
      210,
      78,
      89,
      178,
      189,
      219,
      87,
      25,
      58,
      5,
    ],
    "type": "Buffer",
  },
]
`;
